--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,5 +23,10 @@
     "project": [
       "tsconfig.json"
     ]
+  },
+  "rules": {
+    "@typescript-eslint/ban-ts-comment": [
+      "off"
+    ]
   }
 }
